[gd_scene load_steps=5 format=3 uid="uid://8cmtkult20jd"]

[ext_resource type="Texture2D" uid="uid://cl1h1x28hudhr" path="res://tempProj_JD.png" id="1_2l87e"]
[ext_resource type="Script" path="res://source/scripts/projectile.gd" id="1_qwu2g"]
[ext_resource type="Script" path="res://source/scripts/PlayerHitbox.gd" id="2_qh448"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qwy7v"]
radius = 5.0
height = 48.0

[node name="Projectile" type="Node2D"]
script = ExtResource("1_qwu2g")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_2l87e")

[node name="PlayerHitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
script = ExtResource("2_qh448")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHitbox"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_qwy7v")

[node name="ImpactDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="ID_ColShape" type="CollisionShape2D" parent="ImpactDetector"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_qwy7v")

[node name="lifespan_timer" type="Timer" parent="."]
